Fix image spacing on the Contact page.

--- a/styles/Content.module.css
+++ b/styles/Content.module.css
@@ -90,6 +90,8 @@
 
 .imageH400 {
   max-height: 400px !important;
+  width: auto !important;
+  max-width: 100%;
 }
 
 .link {
